Additional edits to homework

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
     <title>Joanna Pastcan's Portfolio</title>
   </head>
 <!--MAKE NOTES BEFORE SUBMITTING-->
@@ -27,33 +28,51 @@
       <div class="about">
         <h2>Full Stack Web Developer</h2>
         <p>My name is Joanna and this is my portfolio page.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, pariatur. Assumenda, officiis vitae quidem ullam reprehenderit tenetur sit quasi error deserunt nemo at et ea consectetur facilis? Voluptatum, autem mollitia!</p>
+        <p>"To see a World in a Grain of Sand, And Heaven in a Wild Flower, Hold Infinity in the palm of your hand, and Eternity in an hour." By, William Blake.</p>
       </div>
     </section>
 
+    <div class= "projects" id="projects">
+      <section class="projects1">
+        <a href="www.github.com/jo37973"><img src="./Field.jpg" id = "projects1" alt="Portfolio Link"><h3>Portfolio</h3></a></li>
+      <p>Explain this link in a short paragraph here</p>
+      </section>
+      <div class="projects1a">
+        <section class="projects2">
+          <a href="https://jo37973.github.io/prework-about-me/"><img src="./About-Me.jpg" alt="Precourse Link"><h3>Introduction</h3></a></li>
+        <p>Explain this link in a short paragraph here</p>
+        </section>
+        <section class="projects2">
+          <a href="https://jo37973.github.io/MiniProject1/"><img src="./Mini-Project.jpg" alt="Mini Project Link"><h3>Mini Project</h3></a></li>
+        <p>Explain this link in a short paragraph here</p>
+        </section>
+        <section class="projects2">
+          <a href="https://jo37973.github.io/Horiseon-Homework/"><img src="./Horiseon-Homework.jpg" alt="Homework Example"><h3>Horiseon Homework</h3></a></li>
+        <p>Explain this link in a short paragraph here</p>
+        </section>
+      </div>
+    </div>
+
     <main>
-      <section class="box1" id= "projects">
-        <div>Projects</div>
-        <ul class="work">
-          <li><a href="www.github.com/jo37973"><img src="./Field.jpg" alt="Portfolio Link"><h3>Portfolio</h3></a></li>
-          <li><a href="https://jo37973.github.io/prework-about-me/"><img src="./Field.jpg" alt="Precourse Link"><h3>Precourse work</h3></a></li>
-          <li><a href="https://jo37973.github.io/MiniProject1/"><img src="./Field.jpg" alt="Mini Project Link"><h3>Mini Project</h3></a></li>
-          <li><a href="https://jo37973.github.io/Horiseon-Homework/"><img src="./Field.jpg" alt="Homework Example"><h3>Homework Example</h3></a></li>
+      <section class="box2">
+        <div class="box2a" id="aboutme">About Me</div>
+        <p>Section of info about me Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, quo quas! Laudantium nemo earum est mollitia deleniti aliquid et dignissimos, quaerat maiores tenetur nesciunt? Fugiat blanditiis veniam iure ex officiis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam vel molestias quae modi alias voluptatem nam inventore excepturi quis. Dolores blanditiis dolorem impedit, illo expedita obcaecati ullam nostrum corrupti odit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate repudiandae nihil ex illo molestias quam modi itaque recusandae tempore nam repellat odit quod, commodi odio facere delectus laborum voluptas earum.</p>
+
+        <div class="box2a" id= "resume">Resume</div>
+        <p>Space for resume here Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, eveniet autem totam, ullam corporis molestiae recusandae enim fugit ipsum sunt mollitia porro excepturi, non error et maxime nemo aperiam molestias. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia nisi porro, labore, corrupti aut eius perferendis beatae temporibus, nostrum iure ipsa. Magni ullam temporibus aliquam non in quaerat perferendis nesciunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero accusantium ut soluta possimus architecto asperiores quasi odio veniam temporibus sint, eius excepturi vel perferendis voluptas rerum beatae neque natus minima!</p>
+      </section>
+    </main>
+
+      <section class="box3" id="contact">
+        <div class="box3title"><h3>Contact</h3></div>
+        <ul class="getintouch">
+          <li><a href="https://www.linkedin.com/in/jo37973/"><span class="iconify-inline" data-icon="ri:linkedin-box-fill" data-width="32" style="margin-right: 5px; vertical-align: -0.40em;"></span><h4>LinkedIn</h4></a></li>
+          <li><a href="https://www.github.com/jo37973"><span class="iconify-inline" data-icon="icon-park:github" data-width="32" style="margin-right: 5px; vertical-align: -0.15em;"></span><h4>GitHub</h4></a></li>
+          <li><a href="timelessmoment05@gmail.com"><span class="iconify-inline" data-icon="clarity:email-solid" data-width="32" style="margin-right: 5px; vertical-align: -0.40em;"></span><h4>E-mail</h4></a></li>
         </ul>
       </section>
 
-      <section class="box2">
-        <div class="box2a" id="aboutme">About Me</div>
-        <p>Section of info about me</p>
-        <div class= "box2b" id= "resume">Resume</div>
-        <p>Space for resume here</p>
-      </section>
-
-      <section class="box3" id= "contact">
-        <div>Contact</div>
-      </section>
-
-    </main>
+      <footer><h3>© 2021 Joanna Pastcan</h3></footer>
   </body>
 
 </html>
