Mobile responsive edits to portfolio

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
     <title>Joanna Pastcan's Portfolio</title>
   </head>
-<!--MAKE NOTES BEFORE SUBMITTING-->
   <body>
+    <!--This is the top header of the portfolio page, including links to sections on the page-->
     <header class="main-header">
       <h1>Joanna Pastcan</h1>
       <ul class="nav">
@@ -19,59 +19,68 @@
         <li><a href="#contact"><h3>Contact</h3></a></li>
       </ul>
     </header>
-
+<!--This is the image of Joanna in the top left Home section of the website-->
     <section class="aboutMe">
      <div class="caption">
         <img src="./Joanna-pic.jpg" alt="A picture of Joanna">
       </div>
-
+<!--This is the introduction section in the top right Home section of the website-->
       <div class="about">
         <h2>Full Stack Web Developer</h2>
-        <p>My name is Joanna and this is my portfolio page.</p>
+        <br>
         <p>"To see a World in a Grain of Sand, And Heaven in a Wild Flower, Hold Infinity in the palm of your hand, and Eternity in an hour." By, William Blake.</p>
+        <br>
+        <p>An effective website is achieved with patience, determination, problem-solving, and creativity. These are fundamentals, and ones in which I embrace. As a full stack web developer, I will apply my knowledge and skills to provide functional and quality websites, while continuing to further my education and expertise in the field.</p>
       </div>
     </section>
-
+<!--This is the Projects section that can be accessed from the header links, that will display clickable links (that will open in a new tab) and images to my other work and projects.The id="projects" makes the header link scroll to this section-->
     <div class= "projects" id="projects">
       <section class="projects1">
-        <a href="www.github.com/jo37973"><img src="./Field.jpg" id = "projects1" alt="Portfolio Link"><h3>Portfolio</h3></a></li>
-      <p>Explain this link in a short paragraph here</p>
+        <a href="https://github.com/Jo37973" target="_blank"><img src="./Field.jpg" id = "projects1" alt="Portfolio Link"><h3>Portfolio</h3></a></li>
+        <p>This is my Portfolio page that displays my projects and provides information about myself as a full stack web developer.</p>
       </section>
       <div class="projects1a">
         <section class="projects2">
-          <a href="https://jo37973.github.io/prework-about-me/"><img src="./About-Me.jpg" alt="Precourse Link"><h3>Introduction</h3></a></li>
-        <p>Explain this link in a short paragraph here</p>
+          <a href="https://jo37973.github.io/prework-about-me/" target="_blank"><img src="./About-Me.jpg" alt="Precourse Link"><h3>Introduction</h3></a></li>
+          <p>This was a Coding Bootcamp assignment to create a static HTML website using HTML and some CSS to create an "About Me" page.</p>
         </section>
         <section class="projects2">
-          <a href="https://jo37973.github.io/MiniProject1/"><img src="./Mini-Project.jpg" alt="Mini Project Link"><h3>Mini Project</h3></a></li>
-        <p>Explain this link in a short paragraph here</p>
+          <a href="https://jo37973.github.io/MiniProject1/" target="_blank"><img src="./Mini-Project.jpg" alt="Mini Project Link"><h3>Mini Project</h3></a></li>
+          <p>This Mini Project was to create a page with semantic HTML elements and CSS class selectors, while applying knowldge adn skills learned in Coding Class to fulfill the project requirements.</p>
         </section>
         <section class="projects2">
-          <a href="https://jo37973.github.io/Horiseon-Homework/"><img src="./Horiseon-Homework.jpg" alt="Homework Example"><h3>Horiseon Homework</h3></a></li>
-        <p>Explain this link in a short paragraph here</p>
+          <a href="https://jo37973.github.io/Horiseon-Homework/" target="_blank"><img src="./Horiseon-Homework.jpg" alt="Homework Example"><h3>Horiseon Homework</h3></a></li>
+          <p>This homework assignment was to optimize this website, provide logical structure and accessible attributes, and have a functional website to demonstrate the skills learned in Coding Class.</p>
         </section>
       </div>
     </div>
-
+<!--This is the About Me section, from the header link that scrolls down to this section. This will describe who I am, my background, and my goals as a Full Stack Web Developer. The id="About Me", and "Resume" makes the header link scroll to these sections.---> 
     <main>
       <section class="box2">
-        <div class="box2a" id="aboutme">About Me</div>
-        <p>Section of info about me Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, quo quas! Laudantium nemo earum est mollitia deleniti aliquid et dignissimos, quaerat maiores tenetur nesciunt? Fugiat blanditiis veniam iure ex officiis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam vel molestias quae modi alias voluptatem nam inventore excepturi quis. Dolores blanditiis dolorem impedit, illo expedita obcaecati ullam nostrum corrupti odit! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate repudiandae nihil ex illo molestias quam modi itaque recusandae tempore nam repellat odit quod, commodi odio facere delectus laborum voluptas earum.</p>
-
-        <div class="box2a" id= "resume">Resume</div>
-        <p>Space for resume here Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, eveniet autem totam, ullam corporis molestiae recusandae enim fugit ipsum sunt mollitia porro excepturi, non error et maxime nemo aperiam molestias. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia nisi porro, labore, corrupti aut eius perferendis beatae temporibus, nostrum iure ipsa. Magni ullam temporibus aliquam non in quaerat perferendis nesciunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero accusantium ut soluta possimus architecto asperiores quasi odio veniam temporibus sint, eius excepturi vel perferendis voluptas rerum beatae neque natus minima!</p>
+        <div class="box2a" id="aboutme"><h3>About Me</h3>
+          <p>I am currently attending UC Irvine to become a full stack web developer. I graduated from Sonoma State University in 2009 with a B.A. in Liberal Arts and a Preliminary Multiple Subject Teaching Credential. Various skills and knowldge from positions over the years can be applied in the field of web development. Organization and creativity are applied greatly, which I have experience with from being a photographer, a substitute teacher, and working in customer service and administrative office positions.  </p>
+          <p>Becoming a mother has changed my life for the better. I have had the priviledge to raise my children as a stay-at-home mom for many years, while also holding various positions throughout. Being a mother requires patience, creativity, improvisation, trial and error, problem-solving, determination, having a plan, and persistance.</p>
+          <p>I am highly driven to learn the skills needed, and to continue to further my education, to become  and attain a job as a full stack web developer. I love a challenge and enjoy learning new things. I am quick to learn, and pour my heart into everyting I do. look forward to working on and creating websites for future clients and/or employers.</p>
+        </div>
+  
+<!--This is the Resume section, from the header link that scrolls down to this section. This will display my current resume-->
+        <div class="box2a" id= "resume"><h3>Resume</h3>
+          <br><br><br><br><br><br>
+          <a href="./Joanna Pastcan Resume.pdf" target="_blank"><span class="iconify-inline" id ="pdf"  data-icon="ci:file-pdf" data-width="100" style="margin-left: 5px; vertical-align: -0.10em;"></span></a>
+          <p>Joanna's Resume</p>
+        </div>
       </section>
     </main>
-
+<!--This is my contact section, from the header link that scrolls down to this section. This will display various ways to contact me with icons and links (the links will open in a new tab). The id="contact" makes the header link scroll to this section--->
       <section class="box3" id="contact">
         <div class="box3title"><h3>Contact</h3></div>
         <ul class="getintouch">
-          <li><a href="https://www.linkedin.com/in/jo37973/"><span class="iconify-inline" data-icon="ri:linkedin-box-fill" data-width="32" style="margin-right: 5px; vertical-align: -0.40em;"></span><h4>LinkedIn</h4></a></li>
-          <li><a href="https://www.github.com/jo37973"><span class="iconify-inline" data-icon="icon-park:github" data-width="32" style="margin-right: 5px; vertical-align: -0.15em;"></span><h4>GitHub</h4></a></li>
-          <li><a href="timelessmoment05@gmail.com"><span class="iconify-inline" data-icon="clarity:email-solid" data-width="32" style="margin-right: 5px; vertical-align: -0.40em;"></span><h4>E-mail</h4></a></li>
+          <li><a href="https://www.linkedin.com/in/jo37973/" target="_blank"><span class="iconify-inline" data-icon="ri:linkedin-box-fill" data-width="32" style="margin-right: 5px; vertical-align: -0.40em;"></span><h4>LinkedIn</h4></a></li>
+          <li><a href="https://www.github.com/jo37973" target="_blank"><span class="iconify-inline" data-icon="bi:github" style="color: black; margin-right: 10px; vertical-align: -0.15em;" data-width="32"></span><h4>GitHub</h4></a></li>
+          <li><a href="mailto:timelessmoment05@gmail.com" target="_blank"><span class="iconify-inline" data-icon="clarity:email-solid" data-width="32" style="margin-right: 5px; vertical-align: -0.40em;"></span><h4>E-mail</h4></a></li>
         </ul>
       </section>
-
+<!--This is the footer of the website-->
       <footer><h3>© 2021 Joanna Pastcan</h3></footer>
   </body>
 
