--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!--This is the Projects section that can be accessed from the header links, that will display clickable links (that will open in a new tab) and images to my other work and projects.The id="projects" makes the header link scroll to this section-->
     <div class= "projects" id="projects">
       <section class="projects1">
-        <a href="https://github.com/Jo37973" target="_blank"><img src="./Field.jpg" id = "projects1" alt="Portfolio Link"><h3>Portfolio</h3></a></li>
+        <a href="https://jo37973.github.io/Joanna-Pastcans-Portfolio/" target="_blank"><img src="./Field.jpg" id = "projects1" alt="Portfolio Link"><h3>Portfolio</h3></a></li>
         <p>This is my Portfolio page that displays my projects and provides information about myself as a full stack web developer.</p>
       </section>
       <div class="projects1a">
